Clean ups, bug fixes, formatting issues
Cleaned up some dead code, fixed some minor bugs and formatting issues. In the server app.js added code to set the max load to 100mb as some images were too big to store on mongoDB

--- a/tunetalk/src/css/App.css
+++ b/tunetalk/src/css/App.css
@@ -94,3 +94,8 @@ input {
     cursor: pointer;
     font-size: 14px;
 }
+
+.feed-page{
+    color: red;
+
+}
